ubiquitous-spoon/overlays/dev/traefik-mdw-stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: ubiquitous-spoon
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /ubiquitous-spoon
