ubiquitous-spoon/overlays/dev/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-ubiquitous-spoon
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ubiquitous-spoon
  template:
    metadata:
      labels:
        app: ubiquitous-spoon
    spec:
      containers:
      - name: ubiquitous-spoon
        image: audryus/ubiquitous-spoon:3842908028
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
  strategy:
    blueGreen: 
      # activeService specifies the service to update with the new template hash at time of promotion.
      # This field is mandatory for the blueGreen update strategy.
      activeService: ubiquitous-spoon
      # previewService specifies the service to update with the new template hash before promotion.
      # This allows the preview stack to be reachable without serving production traffic.
      # This field is optional.
      previewService: ubiquitous-spoon-preview
      # autoPromotionEnabled disables automated promotion of the new stack by pausing the rollout
      # immediately before the promotion. If omitted, the default behavior is to promote the new
      # stack as soon as the ReplicaSet are completely ready/available.
      # Rollouts can be resumed using: `kubectl argo rollouts promote ROLLOUT`
      autoPromotionEnabled: false

---
kind: Service
apiVersion: v1
metadata:
  name: ubiquitous-spoon
spec:
  selector:
    app: ubiquitous-spoon
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: ubiquitous-spoon-preview
spec:
  selector:
    app: ubiquitous-spoon
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
