ubiquitous-spoon/overlays/dev/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-ubiquitous-spoon
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["apps.audryus.arpa"]
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /ubiquitous-spoon
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: ''
      backendRefs:
      - name: ubiquitous-spoon
        weight: 1
        port: 80
